added tabs functionality to text editor side but ig now i have to design new logic for the note text area

--- a/note_app_frontend/index.html
+++ b/note_app_frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://www.nerdfonts.com/assets/css/webfont.css">
     <title>react note</title>
+    <link href="https://fonts.googleapis.com/css?family=Gothic+A1:300,600|Playfair+Display" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
